# 42ft_irc

./: .gitignore  CMakeLists.txt  Channel.h  Command.h  Makefile  Message.h  PROTOCOL  README.md  Server.h  User.h  Utility.h  main.cpp
includes/: Channel.h  ChannelRepository.h  Command.h  Constants.h  Middleware.h  Request.h  Server.h  User.h  UserRepository.h  Utility.h
srcs/: main.cpp
